tests/baselines/reference/getAndSetNotIdenticalType3.errors.txt
tests/cases/compiler/getAndSetNotIdenticalType3.ts(5,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/getAndSetNotIdenticalType3.ts(5,9): error TS2380: 'get' and 'set' accessor must have the same type 'A<string>', but this 'get' accessor has the type 'A<number>'.
tests/cases/compiler/getAndSetNotIdenticalType3.ts(8,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/getAndSetNotIdenticalType3.ts(8,9): error TS2380: 'get' and 'set' accessor must have the same type 'A<number>', but this 'get' accessor has the type 'A<string>'.
tests/cases/compiler/getAndSetNotIdenticalType3.ts(9,9): error TS2322: Type 'A<string>' is not assignable to type 'A<number>'.
  Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/getAndSetNotIdenticalType3.ts (5 errors) ====
    class A<T> { foo: T; }
    
    class C<T> {
        data: A<number>;
        get x(): A<number> {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2380: 'get' and 'set' accessor must have the same type 'A<string>', but this 'get' accessor has the type 'A<number>'.
!!! related TS2730 tests/cases/compiler/getAndSetNotIdenticalType3.ts:5:9: The respective 'set' accessor has the type 'A<string>'.
            return this.data;
        }
        set x(v: A<string>) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2380: 'get' and 'set' accessor must have the same type 'A<number>', but this 'get' accessor has the type 'A<string>'.
!!! related TS2730 tests/cases/compiler/getAndSetNotIdenticalType3.ts:8:9: The respective 'set' accessor has the type 'A<number>'.
            this.data = v;
            ~~~~~~~~~
!!! error TS2322: Type 'A<string>' is not assignable to type 'A<number>'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
        }
    }
    
    var x = new C();
    var r = x.x;
    x.x = r;